# luau-tauri-template

./: .darklua.json  .luaurc  README.md  build.js  lune.config.json  lune.schema.json  package.json
examples/click_counter/: init.luau
examples/click_counter/components/: button.luau  counter.luau
src/: init.luau
tauri/: index.html  package.json  vite.config.ts
tauri/src/: ipc.ts  main.ts  methods.ts  serialize.ts
tauri/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: main.rs
